# src/docs/swagger.yaml
@@ -889,178 +889,6 @@ paths:
                     $ref: "#/components/responses/404"
                 "500":
                     $ref: "#/components/responses/500"
-    /subjects/search/codes/{code}:
-        get:
-            tags: [subjects]
-            description: Retrive a single Subject by code
-            summary: Retrive a Subject by code
-            security:
-                - bearerAuth: []
-
-            parameters:
-                - $ref: "#/components/parameters/codePathParam"
-            responses:
-                "200":
-                    description: Subject retrive  successful
-                    content:
-                        "application/json":
-                            schema:
-                                type: object
-                                properties:
-                                    message:
-                                        type: string
-                                        example: Subject retrive  successful
-                                    data:
-                                        $ref: "#/components/schemas/Subject"
-
-                "400":
-                    $ref: "#/components/responses/400"
-                "401":
-                    $ref: "#/components/responses/401"
-                "404":
-                    $ref: "#/components/responses/404"
-                "500":
-                    $ref: "#/components/responses/500"
-
-    # search a subject by name
-    # /subjects/search/names/{name}:
-    #     get:
-    #         tags: [subjects]
-    #         parameters:
-    #             - $ref: "#/components/parameters/namePathParam"
-    #         responses:
-    #             "200":
-    #                 description: Subject retrive  successful
-    #                 content:
-    #                     "application/json":
-    #                         schema:
-    #                             type: object
-    #                             properties:
-    #                                 message:
-    #                                     type: string
-    #                                     example: Subject retrive  successful
-    #                                 data:
-    #                                     $ref: "#/components/schemas/Subject"
-
-    #             "400":
-    #                 $ref: "#/components/responses/400"
-    #             "401":
-    #                 $ref: "#/components/responses/401"
-    #             "404":
-    #                 $ref: "#/components/responses/404"
-    #             "500":
-    #                 $ref: "#/components/responses/500"
-
-    # update a subject by code
-    # /subjects/update/codes/{code}:
-    #     put:
-    #         tags: [subjects]
-    #         parameters:
-    #             - $ref: "#/components/parameters/codePathParam"
-    #         requestBody:
-    #             content:
-    #                 "application/json":
-    #                     schema:
-    #                         type: object
-    #                         properties:
-    #                             name:
-    #                                 type: string
-    #                                 example: Python programming
-    #                             code:
-    #                                 type: string
-    #                                 example: 285585
-    #                             theoryFailed:
-    #                                 type: array
-    #                                 example: [608690, 608691, 608692]
-    #                             practicalFailed:
-    #                                 type: array
-    #                                 example: [608690, 608691, 608692]
-    #                         required:
-    #                             - code
-    #         responses:
-    #             "200":
-    #                 description: Subject updated  successfully
-    #                 content:
-    #                     "application/json":
-    #                         schema:
-    #                             type: object
-    #                             properties:
-    #                                 message:
-    #                                     type: string
-    #                                     example: Subject updated  successfully
-    #                                 data:
-    #                                     $ref: "#/components/schemas/Subject"
-    #             "400":
-    #                 $ref: "#/components/responses/400"
-    #             "401":
-    #                 $ref: "#/components/responses/401"
-    #             "404":
-    #                 $ref: "#/components/responses/404"
-    #             "500":
-    #                 $ref: "#/components/responses/500"
-    # /subjects/update/names/{name}:
-    #     put:
-    #         tags: [subjects]
-    #         parameters:
-    #             - $ref: "#/components/parameters/namePathParam"
-    #         requestBody:
-    #             content:
-    #                 "application/json":
-    #                     schema:
-    #                         type: object
-    #                         properties:
-    #                             name:
-    #                                 type: string
-    #                                 example: Python programming
-    #                             code:
-    #                                 type: string
-    #                                 example: 285585
-    #                             theoryFailed:
-    #                                 type: array
-    #                                 example: [608690, 608691, 608692]
-    #                             practicalFailed:
-    #                                 type: array
-    #                                 example: [608690, 608691, 608692]
-    #                         required:
-    #                             - name
-    #         responses:
-    #             "200":
-    #                 description: Subject updated  successfully
-    #                 content:
-    #                     "application/json":
-    #                         schema:
-    #                             type: object
-    #                             properties:
-    #                                 message:
-    #                                     type: string
-    #                                     example: Subject updated  successfully
-    #                                 data:
-    #                                     $ref: "#/components/schemas/Subject"
-    #             "400":
-    #                 $ref: "#/components/responses/400"
-    #             "401":
-    #                 $ref: "#/components/responses/401"
-    #             "404":
-    #                 $ref: "#/components/responses/404"
-    #             "500":
-    #                 $ref: "#/components/responses/500"
-
-    # /subjects/delete/{code}:
-    #     delete:
-    #         tags: [subjects]
-    #         parameters:
-    #             - $ref: "#/components/parameters/codePathParam"
-    #         responses:
-    #             "204":
-    #                 description: Subject deleted  successfully
-    #             "400":
-    #                 $ref: "#/components/responses/400"
-    #             "401":
-    #                 $ref: "#/components/responses/401"
-    #             "404":
-    #                 $ref: "#/components/responses/404"
-    #             "500":
-    #                 $ref: "#/components/responses/500"
 
     /upload:
         post:
